gem5/src/mem/slicc/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> file
Rule 1     file -> decls
Rule 2     empty -> <empty>
Rule 3     decls -> declsx
Rule 4     declsx -> decl declsx
Rule 5     declsx -> empty
Rule 6     decl -> PROTOCOL STRING SEMI
Rule 7     decl -> INCLUDE STRING SEMI
Rule 8     decl -> MACHINE ( enumeration ) : obj_decls { decls }
Rule 9     decl -> MACHINE ( enumeration pairs ) : obj_decls { decls }
Rule 10    decl -> ACTION ( ident pairs ) statements
Rule 11    decl -> IN_PORT ( ident , type , var pairs ) statements
Rule 12    decl -> OUT_PORT ( ident , type , var pairs ) SEMI
Rule 13    decl -> TRANS ( idents , idents , ident_or_star ) idents
Rule 14    decl -> TRANS ( idents , idents ) idents
Rule 15    decl -> TRANS ( idents , idents , ident_or_star ) idents idents
Rule 16    decl -> TRANS ( idents , idents ) idents idents
Rule 17    decl -> EXTERN_TYPE ( type pairs ) SEMI
Rule 18    decl -> GLOBAL ( type pairs ) { type_members }
Rule 19    decl -> STRUCT ( type pairs ) { type_members }
Rule 20    decl -> ENUM ( type pairs ) { type_enums }
Rule 21    decl -> STATE_DECL ( type pairs ) { type_states }
Rule 22    obj_decls -> obj_decl obj_decls
Rule 23    obj_decls -> empty
Rule 24    type_members -> type_member type_members
Rule 25    type_members -> empty
Rule 26    type_member -> obj_decl
Rule 27    type_member -> func_decl
Rule 28    type_member -> func_def
Rule 29    decl -> obj_decl
Rule 30    obj_decl -> type ident pairs SEMI
Rule 31    obj_decl -> type STAR ident pairs SEMI
Rule 32    obj_decl -> type ident ASSIGN expr SEMI
Rule 33    obj_decl -> type STAR ident ASSIGN expr SEMI
Rule 34    decl -> func_decl
Rule 35    func_decl -> void ident ( params ) pairs SEMI
Rule 36    func_decl -> type ident ( params ) pairs SEMI
Rule 37    func_decl -> void ident ( types ) pairs SEMI
Rule 38    func_decl -> type ident ( types ) pairs SEMI
Rule 39    decl -> func_def
Rule 40    func_def -> void ident ( params ) pairs statements
Rule 41    func_def -> type ident ( params ) pairs statements
Rule 42    type_enums -> type_enum type_enums
Rule 43    type_enums -> empty
Rule 44    type_enum -> ident pairs SEMI
Rule 45    type_states -> type_state type_states
Rule 46    type_states -> empty
Rule 47    type_state -> ident , enumeration pairs SEMI
Rule 48    params -> param , params
Rule 49    params -> param
Rule 50    params -> empty
Rule 51    param -> type ident
Rule 52    param -> type STAR ident
Rule 53    param -> type AMP ident
Rule 54    param -> CONST type AMP ident
Rule 55    param -> type STAR ident ASSIGN STRING
Rule 56    param -> type ident ASSIGN NUMBER
Rule 57    param -> type ident ASSIGN LIT_BOOL
Rule 58    param -> type ident ASSIGN STRING
Rule 59    types -> type , types
Rule 60    types -> type
Rule 61    types -> empty
Rule 62    typestr -> typestr DOUBLE_COLON ident
Rule 63    typestr -> ident
Rule 64    type -> typestr
Rule 65    void -> VOID
Rule 66    idents -> { identx }
Rule 67    idents -> ident
Rule 68    identx -> ident SEMI identx
Rule 69    identx -> ident , identx
Rule 70    identx -> ident identx
Rule 71    identx -> empty
Rule 72    ident -> IDENT
Rule 73    ident_or_star -> ident
Rule 74    ident_or_star -> STAR
Rule 75    pairs -> , pairsx
Rule 76    pairs -> empty
Rule 77    pairsx -> pair , pairsx
Rule 78    pairsx -> pair
Rule 79    pair -> ident = STRING
Rule 80    pair -> ident = ident
Rule 81    pair -> ident = NUMBER
Rule 82    pair -> STRING
Rule 83    statements -> { statements_inner }
Rule 84    statements -> { }
Rule 85    statements_inner -> statement statements_inner
Rule 86    statements_inner -> statement
Rule 87    exprs -> expr , exprs
Rule 88    exprs -> expr
Rule 89    exprs -> empty
Rule 90    statement -> expr SEMI
Rule 91    statement -> expr ASSIGN expr SEMI
Rule 92    statement -> ENQUEUE ( var , type ) statements
Rule 93    statement -> ENQUEUE ( var , type , expr ) statements
Rule 94    statement -> DEFER_ENQUEUEING ( var , type ) statements
Rule 95    statement -> STALL_AND_WAIT ( var , var ) SEMI
Rule 96    statement -> WAKEUP_PORT ( var , var ) SEMI
Rule 97    statement -> PEEK ( var , type pairs ) statements
Rule 98    statement -> CHECK_ALLOCATE ( var ) SEMI
Rule 99    statement -> CHECK_NEXT_CYCLE ( ) SEMI
Rule 100   statement -> CHECK_STOP_SLOTS ( var , STRING , STRING ) SEMI
Rule 101   statement -> CHECK_PROBE ( var , var ) SEMI
Rule 102   statement -> RETURN expr SEMI
Rule 103   statement -> if_statement
Rule 104   if_statement -> IF ( expr ) statements
Rule 105   if_statement -> IF ( expr ) statements ELSE statements
Rule 106   if_statement -> IF ( expr ) statements ELSE if_statement
Rule 107   aexpr -> STATIC_CAST ( type , expr )
Rule 108   aexpr -> STATIC_CAST ( type , STRING , expr )
Rule 109   aexpr -> var
Rule 110   aexpr -> type ident
Rule 111   aexpr -> literal
Rule 112   aexpr -> enumeration
Rule 113   aexpr -> ident ( exprs )
Rule 114   aexpr -> NEW type
Rule 115   aexpr -> OOD
Rule 116   aexpr -> aexpr DOT ident
Rule 117   aexpr -> aexpr DOT ident ( exprs )
Rule 118   aexpr -> aexpr [ exprs ]
Rule 119   aexpr -> type DOUBLE_COLON ident ( exprs )
Rule 120   expr -> aexpr
Rule 121   expr -> expr STAR expr
Rule 122   expr -> expr SLASH expr
Rule 123   expr -> expr MOD expr
Rule 124   expr -> expr PLUS expr
Rule 125   expr -> expr DASH expr
Rule 126   expr -> expr LT expr
Rule 127   expr -> expr GT expr
Rule 128   expr -> expr LE expr
Rule 129   expr -> expr GE expr
Rule 130   expr -> expr EQ expr
Rule 131   expr -> expr NE expr
Rule 132   expr -> expr AND expr
Rule 133   expr -> expr OR expr
Rule 134   expr -> expr RIGHTSHIFT expr
Rule 135   expr -> expr LEFTSHIFT expr
Rule 136   expr -> NOT expr
Rule 137   expr -> INCR expr
Rule 138   expr -> DECR expr
Rule 139   expr -> DASH expr
Rule 140   aexpr -> ( expr )
Rule 141   aexpr -> IS_VALID ( expr )
Rule 142   aexpr -> IS_INVALID ( expr )
Rule 143   literal -> STRING
Rule 144   literal -> NUMBER
Rule 145   literal -> FLOATNUMBER
Rule 146   literal -> LIT_BOOL
Rule 147   enumeration -> ident : ident
Rule 148   var -> ident

Terminals, with rules where they appear

(                    : 8 9 10 11 12 13 14 15 16 17 18 19 20 21 35 36 37 38 40 41 92 93 94 95 96 97 98 99 100 101 104 105 106 107 108 113 117 119 140 141 142
)                    : 8 9 10 11 12 13 14 15 16 17 18 19 20 21 35 36 37 38 40 41 92 93 94 95 96 97 98 99 100 101 104 105 106 107 108 113 117 119 140 141 142
,                    : 11 11 12 12 13 13 14 15 15 16 47 48 59 69 75 77 87 92 93 93 94 95 96 97 100 100 101 107 108 108
:                    : 8 9 147
=                    : 79 80 81
ACTION               : 10
AMP                  : 53 54
AND                  : 132
ASSIGN               : 32 33 55 56 57 58 91
CHECK_ALLOCATE       : 98
CHECK_NEXT_CYCLE     : 99
CHECK_PROBE          : 101
CHECK_STOP_SLOTS     : 100
CONST                : 54
DASH                 : 125 139
DECR                 : 138
DEFER_ENQUEUEING     : 94
DOT                  : 116 117
DOUBLE_COLON         : 62 119
ELSE                 : 105 106
ENQUEUE              : 92 93
ENUM                 : 20
EQ                   : 130
EXTERN_TYPE          : 17
FLOATNUMBER          : 145
GE                   : 129
GLOBAL               : 18
GT                   : 127
IDENT                : 72
IF                   : 104 105 106
INCLUDE              : 7
INCR                 : 137
IN_PORT              : 11
IS_INVALID           : 142
IS_VALID             : 141
LE                   : 128
LEFTSHIFT            : 135
LIT_BOOL             : 57 146
LT                   : 126
MACHINE              : 8 9
MOD                  : 123
NE                   : 131
NEW                  : 114
NOT                  : 136
NUMBER               : 56 81 144
OOD                  : 115
OR                   : 133
OUT_PORT             : 12
PEEK                 : 97
PLUS                 : 124
PROTOCOL             : 6
RETURN               : 102
RIGHTSHIFT           : 134
SEMI                 : 6 7 12 17 30 31 32 33 35 36 37 38 44 47 68 90 91 95 96 98 99 100 101 102
SLASH                : 122
STALL_AND_WAIT       : 95
STAR                 : 31 33 52 55 74 121
STATE_DECL           : 21
STATIC_CAST          : 107 108
STRING               : 6 7 55 58 79 82 100 100 108 143
STRUCT               : 19
TRANS                : 13 14 15 16
VOID                 : 65
WAKEUP_PORT          : 96
[                    : 118
]                    : 118
error                : 
{                    : 8 9 18 19 20 21 66 83 84
}                    : 8 9 18 19 20 21 66 83 84

Nonterminals, with rules where they appear

aexpr                : 116 117 118 120
decl                 : 4
decls                : 1 8 9
declsx               : 3 4
empty                : 5 23 25 43 46 50 61 71 76 89
enumeration          : 8 9 47 112
expr                 : 32 33 87 88 90 91 91 93 102 104 105 106 107 108 121 121 122 122 123 123 124 124 125 125 126 126 127 127 128 128 129 129 130 130 131 131 132 132 133 133 134 134 135 135 136 137 138 139 140 141 142
exprs                : 87 113 117 118 119
file                 : 0
func_decl            : 27 34
func_def             : 28 39
ident                : 10 11 12 30 31 32 33 35 36 37 38 40 41 44 47 51 52 53 54 55 56 57 58 62 63 67 68 69 70 73 79 80 80 81 110 113 116 117 119 147 147 148
ident_or_star        : 13 15
idents               : 13 13 13 14 14 14 15 15 15 15 16 16 16 16
identx               : 66 68 69 70
if_statement         : 103 106
literal              : 111
obj_decl             : 22 26 29
obj_decls            : 8 9 22
pair                 : 77 78
pairs                : 9 10 11 12 17 18 19 20 21 30 31 35 36 37 38 40 41 44 47 97
pairsx               : 75 77
param                : 48 49
params               : 35 36 40 41 48
statement            : 85 86
statements           : 10 11 40 41 92 93 94 97 104 105 105 106
statements_inner     : 83 85
type                 : 11 12 17 18 19 20 21 30 31 32 33 36 38 41 51 52 53 54 55 56 57 58 59 60 92 93 94 97 107 108 110 114 119
type_enum            : 42
type_enums           : 20 42
type_member          : 24
type_members         : 18 19 24
type_state           : 45
type_states          : 21 45
types                : 37 38 59
typestr              : 62 64
var                  : 11 12 92 93 94 95 95 96 96 97 98 100 101 101 109
void                 : 35 37 40

Parsing method: LALR

state 0

    (0) S' -> . file
    (1) file -> . decls
    (3) decls -> . declsx
    (4) declsx -> . decl declsx
    (5) declsx -> . empty
    (6) decl -> . PROTOCOL STRING SEMI
    (7) decl -> . INCLUDE STRING SEMI
    (8) decl -> . MACHINE ( enumeration ) : obj_decls { decls }
    (9) decl -> . MACHINE ( enumeration pairs ) : obj_decls { decls }
    (10) decl -> . ACTION ( ident pairs ) statements
    (11) decl -> . IN_PORT ( ident , type , var pairs ) statements
    (12) decl -> . OUT_PORT ( ident , type , var pairs ) SEMI
    (13) decl -> . TRANS ( idents , idents , ident_or_star ) idents
    (14) decl -> . TRANS ( idents , idents ) idents
    (15) decl -> . TRANS ( idents , idents , ident_or_star ) idents idents
    (16) decl -> . TRANS ( idents , idents ) idents idents
    (17) decl -> . EXTERN_TYPE ( type pairs ) SEMI
    (18) decl -> . GLOBAL ( type pairs ) { type_members }
    (19) decl -> . STRUCT ( type pairs ) { type_members }
    (20) decl -> . ENUM ( type pairs ) { type_enums }
    (21) decl -> . STATE_DECL ( type pairs ) { type_states }
    (29) decl -> . obj_decl
    (34) decl -> . func_decl
    (39) decl -> . func_def
    (2) empty -> .
    (30) obj_decl -> . type ident pairs SEMI
    (31) obj_decl -> . type STAR ident pairs SEMI
    (32) obj_decl -> . type ident ASSIGN expr SEMI
    (33) obj_decl -> . type STAR ident ASSIGN expr SEMI
    (35) func_decl -> . void ident ( params ) pairs SEMI
    (36) func_decl -> . type ident ( params ) pairs SEMI
    (37) func_decl -> . void ident ( types ) pairs SEMI
    (38) func_decl -> . type ident ( types ) pairs SEMI
    (40) func_def -> . void ident ( params ) pairs statements
    (41) func_def -> . type ident ( params ) pairs statements
    (64) type -> . typestr
    (65) void -> . VOID
    (62) typestr -> . typestr DOUBLE_COLON ident
    (63) typestr -> . ident
    (72) ident -> . IDENT

    PROTOCOL        shift and go to state 6
    INCLUDE         shift and go to state 7
    MACHINE         shift and go to state 8
    ACTION          shift and go to state 9
    IN_PORT         shift and go to state 11
    OUT_PORT        shift and go to state 13
    TRANS           shift and go to state 14
    EXTERN_TYPE     shift and go to state 15
    GLOBAL          shift and go to state 16
    STRUCT          shift and go to state 17
    ENUM            shift and go to state 18
    STATE_DECL      shift and go to state 19
    $end            reduce using rule 2 (empty -> .)
    VOID            shift and go to state 25
    IDENT           shift and go to state 26

    file                           shift and go to state 1
    decls                          shift and go to state 2
    declsx                         shift and go to state 3
    decl                           shift and go to state 4
    empty                          shift and go to state 5
    ident                          shift and go to state 10
    type                           shift and go to state 12
    obj_decl                       shift and go to state 20
    func_decl                      shift and go to state 21
    func_def                       shift and go to state 22
    void                           shift and go to state 23
    typestr                        shift and go to state 24

state 1

    (0) S' -> file .



state 2

    (1) file -> decls .

    $end            reduce using rule 1 (file -> decls .)


state 3

    (3) decls -> declsx .

    $end            reduce using rule 3 (decls -> declsx .)
    }               reduce using rule 3 (decls -> declsx .)


state 4

    (4) declsx -> decl . declsx
    (4) declsx -> . decl declsx
    (5) declsx -> . empty
    (6) decl -> . PROTOCOL STRING SEMI
    (7) decl -> . INCLUDE STRING SEMI
    (8) decl -> . MACHINE ( enumeration ) : obj_decls { decls }
    (9) decl -> . MACHINE ( enumeration pairs ) : obj_decls { decls }
    (10) decl -> . ACTION ( ident pairs ) statements
    (11) decl -> . IN_PORT ( ident , type , var pairs ) statements
    (12) decl -> . OUT_PORT ( ident , type , var pairs ) SEMI
    (13) decl -> . TRANS ( idents , idents , ident_or_star ) idents
    (14) decl -> . TRANS ( idents , idents ) idents
    (15) decl -> . TRANS ( idents , idents , ident_or_star ) idents idents
    (16) decl -> . TRANS ( idents , idents ) idents idents
    (17) decl -> . EXTERN_TYPE ( type pairs ) SEMI
    (18) decl -> . GLOBAL ( type pairs ) { type_members }
    (19) decl -> . STRUCT ( type pairs ) { type_members }
    (20) decl -> . ENUM ( type pairs ) { type_enums }
    (21) decl -> . STATE_DECL ( type pairs ) { type_states }
    (29) decl -> . obj_decl
    (34) decl -> . func_decl
    (39) decl -> . func_def
    (2) empty -> .
    (30) obj_decl -> . type ident pairs SEMI
    (31) obj_decl -> . type STAR ident pairs SEMI
    (32) obj_decl -> . type ident ASSIGN expr SEMI
    (33) obj_decl -> . type STAR ident ASSIGN expr SEMI
    (35) func_decl -> . void ident ( params ) pairs SEMI
    (36) func_decl -> . type ident ( params ) pairs SEMI
    (37) func_decl -> . void ident ( types ) pairs SEMI
    (38) func_decl -> . type ident ( types ) pairs SEMI
    (40) func_def -> . void ident ( params ) pairs statements
    (41) func_def -> . type ident ( params ) pairs statements
    (64) type -> . typestr
    (65) void -> . VOID
    (62) typestr -> . typestr DOUBLE_COLON ident
    (63) typestr -> . ident
    (72) ident -> . IDENT

    PROTOCOL        shift and go to state 6
    INCLUDE         shift and go to state 7
    MACHINE         shift and go to state 8
    ACTION          shift and go to state 9
    IN_PORT         shift and go to state 11
    OUT_PORT        shift and go to state 13
    TRANS           shift and go to state 14
    EXTERN_TYPE     shift and go to state 15
    GLOBAL          shift and go to state 16
    STRUCT          shift and go to state 17
    ENUM            shift and go to state 18
    STATE_DECL      shift and go to state 19
    $end            reduce using rule 2 (empty -> .)
    }               reduce using rule 2 (empty -> .)
    VOID            shift and go to state 25
    IDENT           shift and go to state 26

    decl                           shift and go to state 4
    declsx                         shift and go to state 27
    empty                          shift and go to state 5
    ident                          shift and go to state 10
    type                           shift and go to state 12
    obj_decl                       shift and go to state 20
    func_decl                      shift and go to state 21
    func_def                       shift and go to state 22
    void                           shift and go to state 23
    typestr                        shift and go to state 24

state 5

    (5) declsx -> empty .

    $end            reduce using rule 5 (declsx -> empty .)
    }               reduce using rule 5 (declsx -> empty .)


state 6

    (6) decl -> PROTOCOL . STRING SEMI

    STRING          shift and go to state 28


state 7

    (7) decl -> INCLUDE . STRING SEMI

    STRING          shift and go to state 29


state 8

    (8) decl -> MACHINE . ( enumeration ) : obj_decls { decls }
    (9) decl -> MACHINE . ( enumeration pairs ) : obj_decls { decls }

    (               shift and go to state 30


state 9

    (10) decl -> ACTION . ( ident pairs ) statements

    (               shift and go to state 31


state 10

    (63) typestr -> ident .

    DOUBLE_COLON    reduce using rule 63 (typestr -> ident .)
    STAR            reduce using rule 63 (typestr -> ident .)
    IDENT           reduce using rule 63 (typestr -> ident .)
    ,               reduce using rule 63 (typestr -> ident .)
    )               reduce using rule 63 (typestr -> ident .)
    AMP             reduce using rule 63 (typestr -> ident .)
    DOT             reduce using rule 63 (typestr -> ident .)
    [               reduce using rule 63 (typestr -> ident .)
    SEMI            reduce using rule 63 (typestr -> ident .)
    SLASH           reduce using rule 63 (typestr -> ident .)
    MOD             reduce using rule 63 (typestr -> ident .)
    PLUS            reduce using rule 63 (typestr -> ident .)
    DASH            reduce using rule 63 (typestr -> ident .)
    LT              reduce using rule 63 (typestr -> ident .)
    GT              reduce using rule 63 (typestr -> ident .)
    LE              reduce using rule 63 (typestr -> ident .)
    GE              reduce using rule 63 (typestr -> ident .)
    EQ              reduce using rule 63 (typestr -> ident .)
    NE              reduce using rule 63 (typestr -> ident .)
    AND             reduce using rule 63 (typestr -> ident .)
    OR              reduce using rule 63 (typestr -> ident .)
    RIGHTSHIFT      reduce using rule 63 (typestr -> ident .)
    LEFTSHIFT       reduce using rule 63 (typestr -> ident .)
    ]               reduce using rule 63 (typestr -> ident .)
    ASSIGN          reduce using rule 63 (typestr -> ident .)


state 11

    (11) decl -> IN_PORT . ( ident , type , var pairs ) statements

    (               shift and go to state 32


state 12

    (30) obj_decl -> type . ident pairs SEMI
    (31) obj_decl -> type . STAR ident pairs SEMI
    (32) obj_decl -> type . ident ASSIGN expr SEMI
    (33) obj_decl -> type . STAR ident ASSIGN expr SEMI
    (36) func_decl -> type . ident ( params ) pairs SEMI
    (38) func_decl -> type . ident ( types ) pairs SEMI
    (41) func_def -> type . ident ( params ) pairs statements
    (72) ident -> . IDENT

    STAR            shift and go to state 34
    IDENT           shift and go to state 26

    ident                          shift and go to state 33

state 13

    (12) decl -> OUT_PORT . ( ident , type , var pairs ) SEMI

    (               shift and go to state 35


state 14

    (13) decl -> TRANS . ( idents , idents , ident_or_star ) idents
    (14) decl -> TRANS . ( idents , idents ) idents
    (15) decl -> TRANS . ( idents , idents , ident_or_star ) idents idents
    (16) decl -> TRANS . ( idents , idents ) idents idents

    (               shift and go to state 36


state 15

    (17) decl -> EXTERN_TYPE . ( type pairs ) SEMI

    (               shift and go to state 37


state 16

    (18) decl -> GLOBAL . ( type pairs ) { type_members }

    (               shift and go to state 38


state 17

    (19) decl -> STRUCT . ( type pairs ) { type_members }

    (               shift and go to state 39


state 18

    (20) decl -> ENUM . ( type pairs ) { type_enums }

    (               shift and go to state 40


state 19

    (21) decl -> STATE_DECL . ( type pairs ) { type_states }

    (               shift and go to state 41


state 20

    (29) decl -> obj_decl .

    PROTOCOL        reduce using rule 29 (decl -> obj_decl .)
    INCLUDE         reduce using rule 29 (decl -> obj_decl .)
    MACHINE         reduce using rule 29 (decl -> obj_decl .)
    ACTION          reduce using rule 29 (decl -> obj_decl .)
    IN_PORT         reduce using rule 29 (decl -> obj_decl .)
    OUT_PORT        reduce using rule 29 (decl -> obj_decl .)
    TRANS           reduce using rule 29 (decl -> obj_decl .)
    EXTERN_TYPE     reduce using rule 29 (decl -> obj_decl .)
    GLOBAL          reduce using rule 29 (decl -> obj_decl .)
    STRUCT          reduce using rule 29 (decl -> obj_decl .)
    ENUM            reduce using rule 29 (decl -> obj_decl .)
    STATE_DECL      reduce using rule 29 (decl -> obj_decl .)
    VOID            reduce using rule 29 (decl -> obj_decl .)
    IDENT           reduce using rule 29 (decl -> obj_decl .)
    $end            reduce using rule 29 (decl -> obj_decl .)
    }               reduce using rule 29 (decl -> obj_decl .)


state 21

    (34) decl -> func_decl .

    PROTOCOL        reduce using rule 34 (decl -> func_decl .)
    INCLUDE         reduce using rule 34 (decl -> func_decl .)
    MACHINE         reduce using rule 34 (decl -> func_decl .)
    ACTION          reduce using rule 34 (decl -> func_decl .)
    IN_PORT         reduce using rule 34 (decl -> func_decl .)
    OUT_PORT        reduce using rule 34 (decl -> func_decl .)
    TRANS           reduce using rule 34 (decl -> func_decl .)
    EXTERN_TYPE     reduce using rule 34 (decl -> func_decl .)
    GLOBAL          reduce using rule 34 (decl -> func_decl .)
    STRUCT          reduce using rule 34 (decl -> func_decl .)
    ENUM            reduce using rule 34 (decl -> func_decl .)
    STATE_DECL      reduce using rule 34 (decl -> func_decl .)
    VOID            reduce using rule 34 (decl -> func_decl .)
    IDENT           reduce using rule 34 (decl -> func_decl .)
    $end            reduce using rule 34 (decl -> func_decl .)
    }               reduce using rule 34 (decl -> func_decl .)


state 22

    (39) decl -> func_def .

    PROTOCOL        reduce using rule 39 (decl -> func_def .)
    INCLUDE         reduce using rule 39 (decl -> func_def .)
    MACHINE         reduce using rule 39 (decl -> func_def .)
    ACTION          reduce using rule 39 (decl -> func_def .)
    IN_PORT         reduce using rule 39 (decl -> func_def .)
    OUT_PORT        reduce using rule 39 (decl -> func_def .)
    TRANS           reduce using rule 39 (decl -> func_def .)
    EXTERN_TYPE     reduce using rule 39 (decl -> func_def .)
    GLOBAL          reduce using rule 39 (decl -> func_def .)
    STRUCT          reduce using rule 39 (decl -> func_def .)
    ENUM            reduce using rule 39 (decl -> func_def .)
    STATE_DECL      reduce using rule 39 (decl -> func_def .)
    VOID            reduce using rule 39 (decl -> func_def .)
    IDENT           reduce using rule 39 (decl -> func_def .)
    $end            reduce using rule 39 (decl -> func_def .)
    }               reduce using rule 39 (decl -> func_def .)


state 23

    (35) func_decl -> void . ident ( params ) pairs SEMI
    (37) func_decl -> void . ident ( types ) pairs SEMI
    (40) func_def -> void . ident ( params ) pairs statements
    (72) ident -> . IDENT

    IDENT           shift and go to state 26

    ident                          shift and go to state 42

state 24

    (64) type -> typestr .
    (62) typestr -> typestr . DOUBLE_COLON ident

  ! shift/reduce conflict for DOUBLE_COLON resolved as shift
    STAR            reduce using rule 64 (type -> typestr .)
    IDENT           reduce using rule 64 (type -> typestr .)
    ,               reduce using rule 64 (type -> typestr .)
    )               reduce using rule 64 (type -> typestr .)
    AMP             reduce using rule 64 (type -> typestr .)
    DOT             reduce using rule 64 (type -> typestr .)
    [               reduce using rule 64 (type -> typestr .)
    SEMI            reduce using rule 64 (type -> typestr .)
    SLASH           reduce using rule 64 (type -> typestr .)
    MOD             reduce using rule 64 (type -> typestr .)
    PLUS            reduce using rule 64 (type -> typestr .)
    DASH            reduce using rule 64 (type -> typestr .)
    LT              reduce using rule 64 (type -> typestr .)
    GT              reduce using rule 64 (type -> typestr .)
    LE              reduce using rule 64 (type -> typestr .)
    GE              reduce using rule 64 (type -> typestr .)
    EQ              reduce using rule 64 (type -> typestr .)
    NE              reduce using rule 64 (type -> typestr .)
    AND             reduce using rule 64 (type -> typestr .)
    OR              reduce using rule 64 (type -> typestr .)
    RIGHTSHIFT      reduce using rule 64 (type -> typestr .)
    LEFTSHIFT       reduce using rule 64 (type -> typestr .)
    ]               reduce using rule 64 (type -> typestr .)
    ASSIGN          reduce using rule 64 (type -> typestr .)
    DOUBLE_COLON    shift and go to state 43

  ! DOUBLE_COLON    [ reduce using rule 64 (type -> typestr .) ]


state 25

    (65) void -> VOID .

    IDENT           reduce using rule 65 (void -> VOID .)


state 26

    (72) ident -> IDENT .

    DOUBLE_COLON    reduce using rule 72 (ident -> IDENT .)
    STAR            reduce using rule 72 (ident -> IDENT .)
    IDENT           reduce using rule 72 (ident -> IDENT .)
    ASSIGN          reduce using rule 72 (ident -> IDENT .)
    (               reduce using rule 72 (ident -> IDENT .)
    ,               reduce using rule 72 (ident -> IDENT .)
    SEMI            reduce using rule 72 (ident -> IDENT .)
    :               reduce using rule 72 (ident -> IDENT .)
    )               reduce using rule 72 (ident -> IDENT .)
    AMP             reduce using rule 72 (ident -> IDENT .)
    DOT             reduce using rule 72 (ident -> IDENT .)
    [               reduce using rule 72 (ident -> IDENT .)
    SLASH           reduce using rule 72 (ident -> IDENT .)
    MOD             reduce using rule 72 (ident -> IDENT .)
    PLUS            reduce using rule 72 (ident -> IDENT .)
    DASH            reduce using rule 72 (ident -> IDENT .)
    LT              reduce using rule 72 (ident -> IDENT .)
    GT              reduce using rule 72 (ident -> IDENT .)
    LE              reduce using rule 72 (ident -> IDENT .)
    GE              reduce using rule 72 (ident -> IDENT .)
    EQ              reduce using rule 72 (ident -> IDENT .)
    NE              reduce using rule 72 (ident -> IDENT .)
    AND             reduce using rule 72 (ident -> IDENT .)
    OR              reduce using rule 72 (ident -> IDENT .)
    RIGHTSHIFT      reduce using rule 72 (ident -> IDENT .)
    LEFTSHIFT       reduce using rule 72 (ident -> IDENT .)
    ]               reduce using rule 72 (ident -> IDENT .)
    =               reduce using rule 72 (ident -> IDENT .)
    }               reduce using rule 72 (ident -> IDENT .)
    {               reduce using rule 72 (ident -> IDENT .)
    PROTOCOL        reduce using rule 72 (ident -> IDENT .)
    INCLUDE         reduce using rule 72 (ident -> IDENT .)
    MACHINE         reduce using rule 72 (ident -> IDENT .)
    ACTION          reduce using rule 72 (ident -> IDENT .)
    IN_PORT         reduce using rule 72 (ident -> IDENT .)
    OUT_PORT        reduce using rule 72 (ident -> IDENT .)
    TRANS           reduce using rule 72 (ident -> IDENT .)
    EXTERN_TYPE     reduce using rule 72 (ident -> IDENT .)
    GLOBAL          reduce using rule 72 (ident -> IDENT .)
    STRUCT          reduce using rule 72 (ident -> IDENT .)
    ENUM            reduce using rule 72 (ident -> IDENT .)
    STATE_DECL      reduce using rule 72 (ident -> IDENT .)
    VOID            reduce using rule 72 (ident -> IDENT .)
    $end            reduce using rule 72 (ident -> IDENT .)


state 27

    (4) declsx -> decl declsx .

    $end            reduce using rule 4 (declsx -> decl declsx .)
    }               reduce using rule 4 (declsx -> decl declsx .)


state 28

    (6) decl -> PROTOCOL STRING . SEMI

    SEMI            shift and go to state 44


state 29

    (7) decl -> INCLUDE STRING . SEMI

    SEMI            shift and go to state 45


state 30

    (8) decl -> MACHINE ( . enumeration ) : obj_decls { decls }
    (9) decl -> MACHINE ( . enumeration pairs ) : obj_decls { decls }
    (147) enumeration -> . ident : ident
    (72) ident -> . IDENT

    IDENT           shift and go to state 26

    enumeration                    shift and go to state 46
    ident                          shift and go to state 47

state 31

    (10) decl -> ACTION ( . ident pairs ) statements
    (72) ident -> . IDENT

    IDENT           shift and go to state 26

    ident                          shift and go to state 48

state 32

    (11) decl -> IN_PORT ( . ident , type , var pairs ) statements
    (72) ident -> . IDENT

    IDENT           shift and go to state 26

    ident                          shift and go to state 49

state 33

    (30) obj_decl -> type ident . pairs SEMI
    (32) obj_decl -> type ident . ASSIGN expr SEMI
    (36) func_decl -> type ident . ( params ) pairs SEMI
    (38) func_decl -> type ident . ( types ) pairs SEMI
    (41) func_def -> type ident . ( params ) pairs statements
    (75) pairs -> . , pairsx
    (76) pairs -> . empty
    (2) empty -> .

    ASSIGN          shift and go to state 51
    (               shift and go to state 52
    ,               shift and go to state 53
    SEMI            reduce using rule 2 (empty -> .)

    pairs                          shift and go to state 50
    empty                          shift and go to state 54

state 34

    (31) obj_decl -> type STAR . ident pairs SEMI
    (33) obj_decl -> type STAR . ident ASSIGN expr SEMI
    (72) ident -> . IDENT

    IDENT           shift and go to state 26

    ident                          shift and go to state 55

state 35

    (12) decl -> OUT_PORT ( . ident , type , var pairs ) SEMI
    (72) ident -> . IDENT

    IDENT           shift and go to state 26

    ident                          shift and go to state 56

state 36

    (13) decl -> TRANS ( . idents , idents , ident_or_star ) idents
    (14) decl -> TRANS ( . idents , idents ) idents
    (15) decl -> TRANS ( . idents , idents , ident_or_star ) idents idents
    (16) decl -> TRANS ( . idents , idents ) idents idents
    (66) idents -> . { identx }
    (67) idents -> . ident
    (72) ident -> . IDENT

    {               shift and go to state 58
    IDENT           shift and go to state 26

    idents                         shift and go to state 57
    ident                          shift and go to state 59

state 37

    (17) decl -> EXTERN_TYPE ( . type pairs ) SEMI
    (64) type -> . typestr
    (62) typestr -> . typestr DOUBLE_COLON ident
    (63) typestr -> . ident
    (72) ident -> . IDENT

    IDENT           shift and go to state 26

    type                           shift and go to state 60
    typestr                        shift and go to state 24
    ident                          shift and go to state 10

state 38

    (18) decl -> GLOBAL ( . type pairs ) { type_members }
    (64) type -> . typestr
    (62) typestr -> . typestr DOUBLE_COLON ident
    (63) typestr -> . ident
    (72) ident -> . IDENT

    IDENT           shift and go to state 26

    type                           shift and go to state 61
    typestr                        shift and go to state 24
    ident                          shift and go to state 10

state 39

    (19) decl -> STRUCT ( . type pairs ) { type_members }
    (64) type -> . typestr
    (62) typestr -> . typestr DOUBLE_COLON ident
    (63) typestr -> . ident
    (72) ident -> . IDENT

    IDENT           shift and go to state 26

    type                           shift and go to state 62
    typestr                        shift and go to state 24
    ident                          shift and go to state 10

state 40

    (20) decl -> ENUM ( . type pairs ) { type_enums }
    (64) type -> . typestr
    (62) typestr -> . typestr DOUBLE_COLON ident
    (63) typestr -> . ident
    (72) ident -> . IDENT

    IDENT           shift and go to state 26

    type                           shift and go to state 63
    typestr                        shift and go to state 24
    ident                          shift and go to state 10

state 41

    (21) decl -> STATE_DECL ( . type pairs ) { type_states }
    (64) type -> . typestr
    (62) typestr -> . typestr DOUBLE_COLON ident
    (63) typestr -> . ident
    (72) ident -> . IDENT

    IDENT           shift and go to state 26

    type                           shift and go to state 64
    typestr                        shift and go to state 24
    ident                          shift and go to state 10

state 42
